--- a/environment.yml
+++ b/environment.yml
@@ -1,177 +1,154 @@
-name: FLCausalMixture
+name: Advanced_Learning
 channels:
   - defaults
-  - https://repo.anaconda.com/pkgs/main
-  - https://repo.anaconda.com/pkgs/r
-  - https://repo.anaconda.com/pkgs/msys2
 dependencies:
-  - anyio=4.2.0=py38haa95532_0
+  - anyio=4.7.0=py313haa95532_0
   - argon2-cffi=21.3.0=pyhd3eb1b0_0
-  - argon2-cffi-bindings=21.2.0=py38h2bbff1b_0
-  - asttokens=2.0.5=pyhd3eb1b0_0
-  - async-lru=2.0.4=py38haa95532_0
-  - attrs=24.2.0=py38haa95532_0
-  - babel=2.11.0=py38haa95532_0
-  - backcall=0.2.0=pyhd3eb1b0_0
-  - beautifulsoup4=4.12.3=py38haa95532_0
-  - bleach=4.1.0=pyhd3eb1b0_0
-  - brotli-python=1.0.9=py38hd77b12b_8
+  - argon2-cffi-bindings=21.2.0=py313h827c3e9_1
+  - asttokens=3.0.0=py313haa95532_0
+  - async-lru=2.0.4=py313haa95532_0
+  - attrs=24.3.0=py313haa95532_0
+  - babel=2.16.0=py313haa95532_0
+  - beautifulsoup4=4.12.3=py313haa95532_0
+  - blas=1.0=mkl
+  - bleach=6.2.0=py313haa95532_0
+  - bottleneck=1.4.2=py313h2cb717b_0
+  - brotli-python=1.0.9=py313h5da7b33_9
+  - bzip2=1.0.8=h2bbff1b_6
   - ca-certificates=2025.2.25=haa95532_0
-  - cffi=1.17.1=py38h827c3e9_0
-  - colorama=0.4.6=py38haa95532_0
-  - comm=0.2.1=py38haa95532_0
-  - debugpy=1.6.7=py38hd77b12b_0
+  - certifi=2025.6.15=py313haa95532_0
+  - cffi=1.17.1=py313h827c3e9_1
+  - charset-normalizer=3.3.2=pyhd3eb1b0_0
+  - colorama=0.4.6=py313haa95532_0
+  - comm=0.2.1=py313haa95532_0
+  - debugpy=1.8.11=py313h5da7b33_0
   - decorator=5.1.1=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
-  - exceptiongroup=1.2.0=py38haa95532_0
   - executing=0.8.3=pyhd3eb1b0_0
-  - h11=0.14.0=py38haa95532_0
-  - httpcore=1.0.2=py38haa95532_0
-  - httpx=0.27.0=py38haa95532_0
-  - importlib_metadata=7.0.1=hd3eb1b0_0
-  - importlib_resources=6.4.0=py38haa95532_0
-  - ipykernel=6.29.5=py38haa95532_0
-  - ipython=8.12.2=py38haa95532_0
-  - jedi=0.19.1=py38haa95532_0
-  - json5=0.9.6=pyhd3eb1b0_0
-  - jsonschema=4.23.0=py38haa95532_0
-  - jsonschema-specifications=2023.7.1=py38haa95532_0
-  - jupyter-lsp=2.2.0=py38haa95532_0
-  - jupyter_client=8.6.0=py38haa95532_0
-  - jupyter_core=5.7.2=py38haa95532_0
-  - jupyter_events=0.10.0=py38haa95532_0
-  - jupyter_server=2.14.1=py38haa95532_0
-  - jupyter_server_terminals=0.4.4=py38haa95532_1
-  - jupyterlab=4.2.5=py38haa95532_0
-  - jupyterlab_pygments=0.1.2=py_0
-  - jupyterlab_server=2.27.3=py38haa95532_0
+  - expat=2.7.1=h8ddb27b_0
+  - h11=0.16.0=py313haa95532_0
+  - httpcore=1.0.9=py313haa95532_0
+  - httpx=0.28.1=py313haa95532_0
+  - icc_rt=2022.1.0=h6049295_2
+  - idna=3.7=py313haa95532_0
+  - intel-openmp=2023.1.0=h59b6b97_46320
+  - ipykernel=6.29.5=py313haa95532_1
+  - ipython=9.1.0=py313haa95532_0
+  - ipython_pygments_lexers=1.1.1=py313haa95532_0
+  - jedi=0.19.2=py313haa95532_0
+  - jinja2=3.1.6=py313haa95532_0
+  - json5=0.9.25=py313haa95532_0
+  - jsonschema=4.23.0=py313haa95532_0
+  - jsonschema-specifications=2023.7.1=py313haa95532_0
+  - jupyter-lsp=2.2.5=py313haa95532_0
+  - jupyter_client=8.6.3=py313haa95532_0
+  - jupyter_core=5.7.2=py313haa95532_0
+  - jupyter_events=0.12.0=py313haa95532_0
+  - jupyter_server=2.15.0=py313haa95532_0
+  - jupyter_server_terminals=0.5.3=py313haa95532_0
+  - jupyterlab=4.3.4=py313haa95532_0
+  - jupyterlab_pygments=0.3.0=py313haa95532_0
+  - jupyterlab_server=2.27.3=py313haa95532_0
   - libffi=3.4.4=hd77b12b_1
+  - libmpdec=4.0.0=h827c3e9_0
   - libsodium=1.0.18=h62dcd97_0
-  - matplotlib-inline=0.1.6=py38haa95532_0
-  - mistune=2.0.4=py38haa95532_0
-  - nbclient=0.8.0=py38haa95532_0
-  - nbconvert=7.16.4=py38haa95532_0
-  - nbformat=5.10.4=py38haa95532_0
-  - nest-asyncio=1.6.0=py38haa95532_0
-  - notebook=7.2.2=py38haa95532_1
-  - notebook-shim=0.2.3=py38haa95532_0
+  - markupsafe=3.0.2=py313h827c3e9_0
+  - matplotlib-inline=0.1.6=py313haa95532_0
+  - mistune=3.1.2=py313haa95532_0
+  - mkl=2023.1.0=h6b88ed4_46358
+  - mkl-service=2.4.0=py313h827c3e9_2
+  - mkl_fft=1.3.11=py313h827c3e9_0
+  - mkl_random=1.2.8=py313hce38976_0
+  - nbclient=0.10.2=py313haa95532_0
+  - nbconvert-core=7.16.6=py313haa95532_0
+  - nbformat=5.10.4=py313haa95532_0
+  - nest-asyncio=1.6.0=py313haa95532_0
+  - notebook=7.3.2=py313haa95532_1
+  - notebook-shim=0.2.4=py313haa95532_0
+  - numexpr=2.10.1=py313h4cd664f_0
+  - numpy=2.3.1=py313ha127e54_0
+  - numpy-base=2.3.1=py313haaa8b43_0
   - openssl=3.0.16=h3f729d1_0
-  - overrides=7.4.0=py38haa95532_0
+  - overrides=7.4.0=py313haa95532_0
+  - packaging=24.2=py313haa95532_0
+  - pandas=2.2.3=py313h5da7b33_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
-  - parso=0.8.3=pyhd3eb1b0_0
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pip=24.2=py38haa95532_0
-  - pkgutil-resolve-name=1.3.10=py38haa95532_1
-  - prometheus_client=0.14.1=py38haa95532_0
-  - prompt-toolkit=3.0.43=py38haa95532_0
-  - psutil=5.9.0=py38h2bbff1b_0
+  - parso=0.8.4=py313haa95532_0
+  - patsy=1.0.1=py313haa95532_0
+  - pip=25.1=pyhc872135_2
+  - platformdirs=4.3.7=py313haa95532_0
+  - prometheus_client=0.21.1=py313haa95532_0
+  - prompt-toolkit=3.0.43=py313haa95532_0
+  - prompt_toolkit=3.0.43=hd3eb1b0_0
+  - psutil=5.9.0=py313h827c3e9_1
   - pure_eval=0.2.2=pyhd3eb1b0_0
   - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.15.1=py38haa95532_1
-  - pysocks=1.7.1=py38haa95532_0
-  - python=3.8.20=h8205438_0
-  - python-dateutil=2.9.0post0=py38haa95532_2
-  - python-fastjsonschema=2.16.2=py38haa95532_0
-  - python-json-logger=2.0.7=py38haa95532_0
-  - pywin32=305=py38h2bbff1b_0
-  - pywinpty=2.0.10=py38h5da7b33_0
-  - pyyaml=6.0.2=py38h827c3e9_0
-  - pyzmq=25.1.2=py38hd77b12b_0
-  - referencing=0.30.2=py38haa95532_0
-  - rfc3339-validator=0.1.4=py38haa95532_0
-  - rfc3986-validator=0.1.1=py38haa95532_0
-  - rpds-py=0.10.6=py38h062c2fa_0
-  - send2trash=1.8.2=py38haa95532_0
-  - setuptools=75.1.0=py38haa95532_0
-  - sniffio=1.3.0=py38haa95532_0
-  - soupsieve=2.5=py38haa95532_0
+  - pygments=2.19.1=py313haa95532_0
+  - pysocks=1.7.1=py313haa95532_0
+  - python=3.13.4=h286a616_100_cp313
+  - python-dateutil=2.9.0post0=py313haa95532_2
+  - python-fastjsonschema=2.20.0=py313haa95532_0
+  - python-json-logger=3.2.1=py313haa95532_0
+  - python-tzdata=2025.2=pyhd3eb1b0_0
+  - python_abi=3.13=0_cp313
+  - pytz=2024.1=py313haa95532_0
+  - pywin32=308=py313h5da7b33_0
+  - pywinpty=2.0.15=py313h72d21ff_0
+  - pyyaml=6.0.2=py313h827c3e9_0
+  - pyzmq=26.2.0=py313h5da7b33_0
+  - referencing=0.30.2=py313haa95532_0
+  - requests=2.32.3=py313haa95532_1
+  - rfc3339-validator=0.1.4=py313haa95532_0
+  - rfc3986-validator=0.1.1=py313haa95532_0
+  - rpds-py=0.22.3=py313h636fa0f_0
+  - scipy=1.15.3=py313hde77213_0
+  - send2trash=1.8.2=py313haa95532_1
+  - setuptools=72.1.0=py313haa95532_0
+  - six=1.17.0=py313haa95532_0
+  - sniffio=1.3.0=py313haa95532_0
+  - soupsieve=2.5=py313haa95532_0
   - sqlite=3.45.3=h2bbff1b_0
   - stack_data=0.2.0=pyhd3eb1b0_0
-  - terminado=0.17.1=py38haa95532_0
-  - tinycss2=1.2.1=py38haa95532_0
-  - tornado=6.4.1=py38h827c3e9_0
-  - traitlets=5.14.3=py38haa95532_0
-  - typing_extensions=4.11.0=py38haa95532_0
-  - urllib3=2.2.3=py38haa95532_0
+  - statsmodels=0.14.4=py313h827c3e9_0
+  - tbb=2021.8.0=h59b6b97_0
+  - terminado=0.17.1=py313haa95532_0
+  - tinycss2=1.4.0=py313haa95532_0
+  - tk=8.6.14=h5e9d12e_1
+  - tornado=6.5.1=py313h827c3e9_0
+  - traitlets=5.14.3=py313haa95532_0
+  - typing-extensions=4.12.2=py313haa95532_0
+  - typing_extensions=4.12.2=py313haa95532_0
+  - tzdata=2025b=h04d1e81_0
+  - urllib3=2.3.0=py313haa95532_0
   - vc=14.42=haa95532_5
   - vs2015_runtime=14.42.34433=hbfb602d_5
   - wcwidth=0.2.5=pyhd3eb1b0_0
-  - webencodings=0.5.1=py38_1
-  - websocket-client=1.8.0=py38haa95532_0
-  - wheel=0.44.0=py38haa95532_0
-  - win_inet_pton=1.1.0=py38haa95532_0
+  - webencodings=0.5.1=py313haa95532_2
+  - websocket-client=1.8.0=py313haa95532_0
+  - wheel=0.45.1=py313haa95532_0
+  - win_inet_pton=1.1.0=py313haa95532_0
   - winpty=0.4.3=4
+  - xz=5.6.4=h4754444_1
   - yaml=0.2.5=he774522_0
   - zeromq=4.3.5=hd77b12b_0
-  - zipp=3.20.2=py38haa95532_0
+  - zlib=1.2.13=h8cc25b3_1
   - pip:
-      - astor==0.8.1
-      - autograd==1.7.0
-      - autograd-gamma==0.5.0
-      - auton-survival==0.1.0
-      - build==1.2.2.post1
-      - cachecontrol==0.14.2
-      - certifi==2025.4.26
-      - charset-normalizer==3.4.2
-      - cleo==2.1.0
-      - contourpy==1.1.1
-      - crashtest==0.4.1
+      - contourpy==1.3.2
       - cycler==0.12.1
-      - distlib==0.3.9
-      - dulwich==0.21.7
-      - ecos==2.0.14
-      - fastjsonschema==2.21.1
-      - filelock==3.16.1
-      - fonttools==4.57.0
-      - formulaic==0.2.4
-      - idna==3.10
-      - importlib-metadata==8.5.0
-      - importlib-resources==6.4.5
-      - installer==0.7.0
-      - interface-meta==1.3.0
-      - jaraco-classes==3.4.0
-      - jinja2==3.1.6
-      - joblib==1.4.2
-      - keyring==24.3.1
-      - kiwisolver==1.4.7
-      - lifelines==0.26.4
-      - markupsafe==2.1.5
-      - matplotlib==3.7.5
-      - more-itertools==10.5.0
-      - msgpack==1.1.1
-      - numexpr==2.8.6
-      - numpy==1.24.4
-      - osqp==1.0.4
-      - packaging==25.0
-      - pandas==1.5.3
-      - pexpect==4.9.0
-      - pillow==10.4.0
-      - pkginfo==1.12.1.2
-      - platformdirs==4.3.6
-      - poetry==1.8.5
-      - poetry-core==1.9.1
-      - poetry-plugin-export==1.8.0
-      - ptyprocess==0.7.0
-      - pyparsing==3.1.4
-      - pyproject-hooks==1.2.0
-      - pytz==2025.2
-      - pywin32-ctypes==0.2.3
-      - rapidfuzz==3.9.7
-      - requests==2.32.4
-      - requests-toolbelt==1.0.0
-      - scikit-learn==1.2.2
-      - scikit-survival==0.21.0
-      - scipy==1.10.1
-      - shellingham==1.5.4
-      - six==1.17.0
-      - threadpoolctl==3.5.0
-      - tomli==2.2.1
-      - tomlkit==0.13.3
-      - torch==1.13.1
-      - torchvision==0.14.1
-      - tqdm==4.67.1
-      - trove-classifiers==2025.5.9.12
-      - typing-extensions==4.13.2
-      - virtualenv==20.31.2
-      - wrapt==1.17.2
-prefix: D:\anaconda3\envs\FLCausalMixture
+      - filelock==3.13.1
+      - fonttools==4.58.5
+      - fsspec==2024.6.1
+      - joblib==1.5.1
+      - kiwisolver==1.4.8
+      - matplotlib==3.10.3
+      - mpmath==1.3.0
+      - networkx==3.3
+      - pillow==11.0.0
+      - pyparsing==3.2.3
+      - scikit-learn==1.7.0
+      - sympy==1.13.3
+      - threadpoolctl==3.6.0
+      - torch==2.7.1+cu128
+      - torchaudio==2.7.1+cu128
+      - torchvision==0.22.1+cu128
+prefix: C:\My_Programs\Anaconda\envs\Advanced_Learning
